2011-07-25 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in ColorThemingStylePanel.
    * Add an Icon for SaveLayersWithoutDataSourcePlugIn

2011-07-24 mmichaud <michael.michaud@free.fr>
    * Fixed a bug related to tables having same names in public schema and
      another schema [ID 3303503]

2011-07-14 mmichaud <michael.michaud@free.fr>
    * Better exception handling while using the new OpenWizard framework
    * Turn code to 1.4.2alpha
    
2011-07-10 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in the look and feel option panel [bug ID: 3354118]

        **** release of OpenJUMP 1.4.1 (svn 2313) ****

2011-07-04 mmichaud <michael.michaud@free.fr>
    * Fix a bug preventing to read old project files

        **** release of OpenJUMP 1.4.1 (svn 2300) ****

2011-07-02 mmichaud <michael.michaud@free.fr>
    * Fixex regex in SaveFileDataSourceQueryChooser to allow directory names
      containing points
    * Activate SaveLayersWithoutDataSourcePlugIn in default plugins

2011-06-29 mmichaud <michael.michaud@free.fr>
    * revert change made on WMS-getMapRequest (see ID: 3327322 and
      Jukka's remark on the JPP developper list)

2011-06-27 edgard soldin
    * FeatureInstaller.addPopupMenuSeparator(JPopupMenu popupMenu, String[] menuPath)
      allowing to conveniently add separators to popup menus

2011-06-27 mmichaud <michael.michaud@free.fr>
    * Include jts1.12 in OpenJUMP distribution
    * removed the patch made for jts1.11 in EditTransaction
      now that jts1.12 is released (see bug ID: 2975012)

2011-06-26 mmichaud <michael.michaud@free.fr>
    * changes "Union by attribute" name into Dissolve (english language)
    * Moved "Calculate areas and length" into Edit Attribute menu
    
2011-06-25 mmichaud <michael.michaud@free.fr> for Wilfried Hornburg
    * fix WMS-getMapRequest incorrect - ID: 3327322

2011-06-22 mmichaud <michael.michaud@free.fr>
    * Add an icon for AddDatastoreLayerPlugIn (Category contextual menu)
