@@ -1,4 +1,9 @@
 2011-07-25 mmichaud <michael.michaud@free.fr>
+    * Fix/improve reverse function in GeometryFunctionPlugIn [ID 3360102]
+      Now works on a clone without modifying source geometry and works on any
+      kind of geometry.
+
+2011-07-25 mmichaud <michael.michaud@free.fr>
     * Fixed a bug in ColorThemingStylePanel.
     * Add an Icon for SaveLayersWithoutDataSourcePlugIn
 
